--- a/timer.html
+++ b/timer.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> timer sample</title>
+  <title> これは、タイマーのサンプルです</title>
 </head>
 <body>
 <p>
    <input type="button" value="カウント開始" id="startcount" >
    <input type="button" value="カウント停止" id="endcount">
 </p>
-<p id="PassageArea">(ここにカウントが表示されます)</p>
+<p id="PassageArea">(浅井遥)</p>
    <script src="timer.js" defer async></script>
 </body>
 </html>
